--- a/src/app/agent/edit-agent/edit-agent.component.html
+++ b/src/app/agent/edit-agent/edit-agent.component.html
@@ -109,13 +109,13 @@
                     <p>{{businessAdd}}</p>
                 </td>
                 <td>
-                    <app-button
-                    [label]="buttonLabel1"
-                    [color]="buttonColor1" 
-                    [type]="buttonType1"
+                    <app-ns-button
+                    [ns_label]="buttonLabel1"
+                    [ns_color]="buttonColor1" 
+                    [ns_type]="buttonType1"
                     (click)="change('business')"
                     >
-                </app-button>
+                </app-ns-button>
                 </td>
             </tr>
             <tr>
@@ -165,13 +165,13 @@
                     <p>{{presentAdd}}</p>
                 </td>
                 <td>
-                    <app-button
-                    [label]="buttonLabel1"
-                    [color]="buttonColor1" 
-                    [type]="buttonType1"
+                    <app-ns-button
+                    [ns_label]="buttonLabel1"
+                    [ns_color]="buttonColor1" 
+                    [ns_type]="buttonType1"
                     (click)="change('present')"
                     >
-                </app-button>
+                </app-ns-button>
                 </td>
             </tr>
             <tr>
@@ -220,13 +220,13 @@
                     <p>{{permanentAdd}}</p>
                 </td>
                 <td>
-                    <app-button
-                    [label]="buttonLabel1"
-                    [color]="buttonColor1" 
-                    [type]="buttonType1"
+                    <app-ns-button
+                    [ns_label]="buttonLabel1"
+                    [ns_color]="buttonColor1" 
+                    [ns_type]="buttonType1"
                     (click)="change('permanent')"
                     >
-                </app-button>
+                </app-ns-button>
                 </td>
             </tr>
             <tr>
@@ -378,13 +378,13 @@
             <tr class="clear:both;">
               
                 <td>  
-                    <app-button
-                        [label]="buttonLabel"
-                        [color]="buttonColor" 
-                        [type]="buttonType"
+                    <app-ns-button
+                        [ns_label]="buttonLabel"
+                        [ns_color]="buttonColor" 
+                        [ns_type]="buttonType"
                         (click)="agentSubmit()"
                         >
-                    </app-button>
+                    </app-ns-button>
                 </td>
             </tr>
         </table>
