--- a/src/app/user/add-user/add-user.component.html
+++ b/src/app/user/add-user/add-user.component.html
@@ -72,14 +72,14 @@
         <tr class="clear:both;">
             
             <td>  
-                <app-button
-                    [label]="buttonLabel"
-                    [color]="buttonColor" 
-                    [type]="buttonType"
+                <app-ns-button
+                    [ns_label]="buttonLabel"
+                    [ns_color]="buttonColor" 
+                    [ns_type]="buttonType"
                    
                     (click)="userSubmit()"
                     >
-                </app-button>
+                </app-ns-button>
             </td>
         </tr>
     </table>
