--- a/src/app/action/action-list-denied/action-list-denied.component.html
+++ b/src/app/action/action-list-denied/action-list-denied.component.html
@@ -30,13 +30,13 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action</th>
           <td mat-cell *matCellDef="let element; let i=index;"> 
-            <app-button
-              [label]="buttonLabel"
-              [color]="buttonColor" 
-              [type]="buttonType"
+            <app-ns-button
+              [ns_label]="buttonLabel"
+              [ns_color]="buttonColor" 
+              [ns_type]="buttonType"
               (click)="confirmDialog(element.username,i)"
               >
-            </app-button>  
+            </app-ns-button>  
           </td>
           
         </ng-container>
