--- a/src/app/action/action-list/action-list.component.html
+++ b/src/app/action/action-list/action-list.component.html
@@ -33,13 +33,13 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action</th>
           <td mat-cell *matCellDef="let element"> 
-              <app-button
-              [label]="buttonLabel"
-              [color]="buttonColor" 
-              [type]="buttonType"
+              <app-ns-button
+              [ns_label]="buttonLabel"
+              [ns_color]="buttonColor" 
+              [ns_type]="buttonType"
               (click)="view(element.actionId)"
               >
-          </app-button>  
+          </app-ns-button>  
           </td>
   
           
