--- a/src/app/agent/list-agent/list-agent.component.html
+++ b/src/app/agent/list-agent/list-agent.component.html
@@ -46,13 +46,13 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element">
-          <app-button
-          [label]="buttonLabel"
-          [color]="buttonColor" 
-          [type]="buttonType"
+          <app-ns-button
+          [ns_label]="buttonLabel"
+          [ns_color]="buttonColor" 
+          [ns_type]="buttonType"
           (click)="edit(element.tin)"
           >
-      </app-button>
+      </app-ns-button>
       </td>
   </ng-container>
 
