--- a/src/app/layouts/toolbar/toolbar.component.html
+++ b/src/app/layouts/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
         <h2 class="left">
             <!-- <img src="../../assets/img/bdlogo.png" alt="nbr_logo" *ngIf="isLoggedIn" class="headerLogo"/> -->
 
-            Income Tax Practitioner
+            <a href="/">Income Tax Practitioner</a>
         </h2>
         <div class="semileft" *ngIf="isLoggedIn">
             <i class="material-icons"  matBadge="{{unread}}" matBadgePosition="before" matBadgeColor="accent" (click)="seeMessages()"
