--- a/src/app/layouts/admin-menu/admin-menu.component.html
+++ b/src/app/layouts/admin-menu/admin-menu.component.html
@@ -61,7 +61,7 @@
     Qualified ITPs
     </mat-expansion-panel-header>
     <mat-nav-list>
-        <a mat-list-item routerLink="/list-certificate" routerLinkActive="active">List of Qualified TRPs</a>
+        <a mat-list-item routerLink="/list-certificate" routerLinkActive="active">List of Qualified ITPs</a>
         <a mat-list-item routerLink="/upload-certificate" routerLinkActive="active">Upload list</a>
     </mat-nav-list>
 </mat-expansion-panel>
