--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -42,7 +42,7 @@
         <th mat-header-cell *matHeaderCellDef> Roles </th>
         <td mat-cell *matCellDef="let element">
             <span *ngFor="let role of element.roles;"> 
-                {{ role?.name=="ROLE_REPRESENTATIVE"?"TRP":"Resource Center" }}
+                {{ role?.name}}
              </span> 
         </td>
       </ng-container>
