--- a/src/app/representative/approve-representative/approve-representative.component.html
+++ b/src/app/representative/approve-representative/approve-representative.component.html
@@ -38,7 +38,7 @@
 
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Type  </th>
-      <td mat-cell *matCellDef="let element"> {{element.type=="0"?"ITP":element.type=="1"?"Advocate":element.type=="2"?"FCMA/FC":"ICMA/ICAB"}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.type=="0"?"ITP":element.type=="1"?"Advocate":element.type=="2"?"FCMA/FCA":element.type=="3"?"ICMA/ICAB":element.type=="4"?"ICSB":"Others"}} </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
