--- a/src/app/representative/file-tax/file-tax.component.html
+++ b/src/app/representative/file-tax/file-tax.component.html
@@ -12,7 +12,7 @@
                 <td>
                     <mat-form-field class="example-full-width">
                     <mat-label>TIN</mat-label>
-                    <input matInput  formControlName="tinNo" type="text"  placeholder="TIN">
+                    <input matInput  formControlName="taxpayerTin" type="text"  placeholder="TIN">
                     </mat-form-field>
                 </td>
             </tr>
@@ -20,7 +20,7 @@
                 <td>
                     <mat-form-field class="example-full-width">
                     <mat-label>NID Registered Mobile No</mat-label>
-                    <input matInput  formControlName="phoneNo" type="text"  placeholder="Mobile No">
+                    <input matInput  formControlName="taxpayerPhoneNo" type="text"  placeholder="Mobile No">
                     </mat-form-field>
                 </td>
             </tr>
