--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
     
     <div class="login-left">
       <h1><b>Welcome to the</b></h1>
-      <h1 class="title"><b>Income Tax Practitioner Management System</b></h1>
+      <h1 class="title"><b>Tax Representative Management System</b></h1>
       <h1><b>of NBR</b></h1>
      
     </div>
@@ -59,7 +59,7 @@
           (click)="login()"
           ></app-button><br>
          <span class="link" (click)="register()">Register</span>        
-          <span class="link_list" (click)="list()">List of registered ITPs</span>
+          <span class="link_list" (click)="list()">List of registered Tax Representatives</span>
 
         </div>
         <p style="color:red;float: left;" *ngIf="failed">{{errorMsg}}</p>
