--- a/src/app/layouts/admin-menu/admin-menu.component.html
+++ b/src/app/layouts/admin-menu/admin-menu.component.html
@@ -14,7 +14,7 @@
 <!-- <a mat-list-item routerLink="/list-agents">Resource Centers</a> -->
 <!-- <a mat-list-item routerLink="/add-agent">Add Agent</a> -->
 <!-- <a mat-list-item routerLink="/list-agent-representative">List of Representative by Agents</a> -->
-<a mat-list-item routerLink="/approve-itp">Approve ITP</a>
+<a mat-list-item routerLink="/approve-itp">Approve Tax Representatives</a>
 <!-- <a mat-list-item>Approve Transfer Request</a>
 <a mat-list-item>Approve Transaction</a> -->
 
@@ -58,10 +58,10 @@
 <mat-expansion-panel>
 
     <mat-expansion-panel-header>
-    Qualified ITPs
+    Qualified Tax Representatives
     </mat-expansion-panel-header>
     <mat-nav-list>
-        <a mat-list-item routerLink="/list-certificate" routerLinkActive="active">List of Qualified ITPs</a>
+        <a mat-list-item routerLink="/list-certificate" routerLinkActive="active">List of Qualified Tax Representatives</a>
         <a mat-list-item routerLink="/upload-certificate" routerLinkActive="active">Upload list</a>
     </mat-nav-list>
 </mat-expansion-panel>
