--- a/src/app/ledger/admin-ledger/admin-ledger.component.html
+++ b/src/app/ledger/admin-ledger/admin-ledger.component.html
@@ -37,7 +37,7 @@
     
 
         <ng-container matColumnDef="itpTin">
-          <th mat-header-cell *matHeaderCellDef>ITP TIN</th>
+          <th mat-header-cell *matHeaderCellDef>Tax Representatives TIN</th>
           <td mat-cell *matCellDef="let element"> {{element.itpTin}} </td>
         </ng-container>
 
