--- a/src/app/representative/add-representative/add-representative.component.html
+++ b/src/app/representative/add-representative/add-representative.component.html
@@ -1,5 +1,5 @@
 <div class="headerdiv">
-    <h2>ITP Registration</h2>
+    <h2>Tax Representative Registration</h2>
   </div>
 
   
@@ -139,12 +139,12 @@
                         <mat-label>Type</mat-label>
                         <mat-select matNativeControl required formControlName="type" (selectionChange)="setAgent($event.value)">
                             <mat-option value="">--Select--</mat-option>
-                            <mat-option value="0">ITP</mat-option> 
-                            <mat-option value="1">Advocate</mat-option> 
-                            <mat-option value="2">FCMA/FCA</mat-option> 
-                            <mat-option value="3">ICMA/ICAB</mat-option> 
-                            <mat-option value="4">ICSB</mat-option> 
-                            <mat-option value="5">Others</mat-option> 
+                            <mat-option value="0">Tax Practitioner</mat-option> 
+                            <mat-option value="1">FCMA/ACMA</mat-option> 
+                            <mat-option value="2">FCA/ACA</mat-option> 
+                            <mat-option value="3">FCS/ACS</mat-option> 
+                            <!-- <mat-option value="4">ICSB</mat-option> 
+                            <mat-option value="5">Others</mat-option>  -->
                         </mat-select>
                     </mat-form-field>
                 </td>
