--- a/src/app/representative/approve-representative-single/approve-representative-single.component.html
+++ b/src/app/representative/approve-representative-single/approve-representative-single.component.html
@@ -1,4 +1,4 @@
-<h3 class="center">ITP Approval - ITP Details</h3>
+<h3 class="center">Tax Representative Approval - Details</h3>
 <img [attr.src]="image" alt="" class="img-responsive">
 
 
