--- a/src/app/representative/approve-representative/approve-representative.component.html
+++ b/src/app/representative/approve-representative/approve-representative.component.html
@@ -1,5 +1,5 @@
 <div class="headerdiv">
-  <h2>Approve ITP</h2>
+  <h2>Approve Tax Representative</h2>
 </div>
 
 <div *ngIf="!loaded" style="text-align: center; margin-top: 50px;">
