--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -6,7 +6,7 @@
     <form class="example-form" [formGroup]="registerForm" #formDir="ngForm" (ngSubmit)="taxpayerSubmit()">
         <table class="example-full-width" cellspacing="0">
             <tr>
-                <h4 style="color: #367a0a;text-align: center;">Enter Income Tax Practitioner (ITP) Information</h4>
+                <h4 style="color: #367a0a;text-align: center;">Enter Tax Representative Information</h4>
             </tr>
             <tr>
                 <td>
