--- a/src/app/agent/agent-representative/agent-representative.component.html
+++ b/src/app/agent/agent-representative/agent-representative.component.html
@@ -1,5 +1,5 @@
 <div class="headerdiv">
-  <h2>List of ITP</h2>
+  <h2>List of Tax Representative</h2>
 </div>
 <div *ngIf="!loaded" style="text-align: center; margin-top: 50px;">
     <p style="color:red;">Data Couldn't be loaded</p>
