--- a/src/app/report/report-admin/report-admin.component.html
+++ b/src/app/report/report-admin/report-admin.component.html
@@ -9,7 +9,7 @@
                 <mat-label>Select Report Type</mat-label>
                     <mat-select matNativeControl required formControlName="type" (selectionChange)="reportType($event.value)">
                         <mat-option value="">--Select--</mat-option>
-                        <mat-option  [value]="1">ITP</mat-option>   
+                        <mat-option  [value]="1">Tax Representatives</mat-option>   
                         <mat-option  [value]="2">Ledgers</mat-option>   
                         <mat-option  [value]="3">Log</mat-option>   
                     </mat-select>
@@ -35,7 +35,7 @@
             </td> -->
             <td *ngIf = "showThirdR">
                 <mat-form-field class="example-full-width">
-                    <mat-label>Enter ITP TIN</mat-label>
+                    <mat-label>Enter Tax Representative TIN</mat-label>
                     <input matInput  formControlName="itpusername" type="number"  placeholder="Username" maxlength="12">
                 </mat-form-field>
             </td>
@@ -78,13 +78,13 @@
     </table>
   
 </form>
-<h3 class="caption" *ngIf="firstOption=='1' && secondOption=='1'&&showCaption==true">All ITPs</h3>
-<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='2'&&showCaption==true">All suspended ITP</h3>
-<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='3'&&showCaption==true">All blocked ITP</h3>
+<h3 class="caption" *ngIf="firstOption=='1' && secondOption=='1'&&showCaption==true">All Tax Representatives</h3>
+<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='2'&&showCaption==true">All suspended Tax Representative</h3>
+<h3 class="caption" *ngIf="firstOption=='1'&& secondOption=='3'&&showCaption==true">All blocked Tax Representative</h3>
 <h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='1'&&showCaption==true">List of Ledgers</h3>
 <h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='2'&&showCaption==true">List of Ledgers within Range</h3>
-<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='3'&&showCaption==true">List of Ledgers of a ITP</h3>
-<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='4'&&showCaption==true">List of Ledgers of a ITP within range</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='3'&&showCaption==true">List of Ledgers of a Tax Representative</h3>
+<h3 class="caption" *ngIf="firstOption=='2'&& secondOption=='4'&&showCaption==true">List of Ledgers of a Tax Representative within range</h3>
 <h3 class="caption" *ngIf="firstOption=='3'&& secondOption=='1'&&showCaption==true">List of Today's Log</h3>
 <table mat-table class="example-full-width datatable" cellspacing="0"  [dataSource]="dataArr" class="mat-elevation-z8" *ngIf="loaded" id="dataTable"> 
 
