--- a/src/app/representative/add-representative/add-representative.component.html
+++ b/src/app/representative/add-representative/add-representative.component.html
@@ -140,9 +140,10 @@
                         <mat-select matNativeControl required formControlName="type" (selectionChange)="setAgent($event.value)">
                             <mat-option value="">--Select--</mat-option>
                             <mat-option value="0">Tax Practitioner</mat-option> 
-                            <mat-option value="1">FCMA/ACMA</mat-option> 
-                            <mat-option value="2">FCA/ACA</mat-option> 
-                            <mat-option value="3">FCS/ACS</mat-option> 
+                            <mat-option value="1">Advocate</mat-option> 
+                            <mat-option value="2">FCMA/ACMA</mat-option> 
+                            <mat-option value="3">FCA/ACA</mat-option> 
+                            <mat-option value="4">FCS/ACS</mat-option> 
                             <!-- <mat-option value="4">ICSB</mat-option> 
                             <mat-option value="5">Others</mat-option>  -->
                         </mat-select>
