--- a/src/app/representative/add-representative/add-representative.component.css
+++ b/src/app/representative/add-representative/add-representative.component.css
@@ -56,3 +56,35 @@ mat-spinner{
 .text-red{
   color: red;
 }
+
+.fixed{
+  position: sticky;
+  top:0;
+  z-index: 999;
+}
+
+.formbe{
+margin: 5px;
+padding-left: 10px;
+padding-right: 10px;
+border: 1.5px solid rgba(216, 220, 230, 0.87);
+border-radius: 5px;
+position: absolute;
+top: 0;
+width: calc(100% - 30px);
+background: white;
+z-index: 100;
+height:65px;
+}
+
+#search{
+    margin-top: -27px;
+    margin-left: -16px;
+    display: inherit;
+}
+
+#clear{
+  float: right;
+  /* display: block; */
+  margin-top: -25px;
+}
