--- a/src/app/certificate/list-public/list-public.component.html
+++ b/src/app/certificate/list-public/list-public.component.html
@@ -44,18 +44,18 @@
           <td mat-cell *matCellDef="let element"> {{element.registrationNo}} </td>
           </ng-container>
       
-          <ng-container matColumnDef="registrationDate">
+          <!-- <ng-container matColumnDef="registrationDate">
             <th mat-header-cell *matHeaderCellDef>Registration Date</th>
             <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:'short'}} </td>
-          </ng-container>
+          </ng-container> -->
         
           <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
         </table>
         <mat-paginator
            
-            [pageSize]="3"
-            [pageSizeOptions]="[5, 10, 20]"
+            [pageSize]="20"
+            [pageSizeOptions]="[20,50,100]"
            showFirstLastButtons="true"
             >
         </mat-paginator>
