--- a/src/app/certificate/list-public/list-public.component.html
+++ b/src/app/certificate/list-public/list-public.component.html
@@ -15,6 +15,11 @@
             <td mat-cell *matCellDef="let element;let i=index;"> {{i+1}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="tin">
             <th mat-header-cell *matHeaderCellDef> TIN </th>
             <td mat-cell *matCellDef="let element"> {{element.tin}} </td>
@@ -38,11 +43,6 @@
             <td mat-cell *matCellDef="let element"> {{element.category}} </td>
           </ng-container>
       
-  
-          <ng-container matColumnDef="registrationNo">
-          <th mat-header-cell *matHeaderCellDef>Registration no</th>
-          <td mat-cell *matCellDef="let element"> {{element.registrationNo}} </td>
-          </ng-container>
       
           <!-- <ng-container matColumnDef="registrationDate">
             <th mat-header-cell *matHeaderCellDef>Registration Date</th>
