--- a/src/app/user/dashboard/dashboard.component.css
+++ b/src/app/user/dashboard/dashboard.component.css
@@ -5,11 +5,30 @@
 .stat{
     display: inline-block;
     width: 50%;
-    margin-left: 16%;
+    margin-left: 14%;
     float: right;
     margin-top: 100px;
 }
 
 #MyDoughnutChart{
     display: inline-block !important;
+}
+
+.container {
+    width: 100%;
+    display: block;
+}
+
+.subcontainer {
+    width: 47%;
+    float: left;
+    text-align: center;
+    background: #e2ebe2;
+    margin-right: 1%;
+    padding: 26px;
+    border-radius: 25px;
+}
+
+.subcontainer>h1 {
+    font-size: 40px;
 }
