--- a/src/app/certificate/list-public/list-public.component.html
+++ b/src/app/certificate/list-public/list-public.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="headerdiv">
-        <h2>All Certificates</h2>
+        <h2>All Tax Representatives</h2>
     </div>
   
       
@@ -20,16 +20,15 @@
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="tin">
+          <!-- <ng-container matColumnDef="tin">
             <th mat-header-cell *matHeaderCellDef> TIN </th>
             <td mat-cell *matCellDef="let element"> {{element.tin}} </td>
           </ng-container>
         
-          <!-- Name Column -->
           <ng-container matColumnDef="nid">
             <th mat-header-cell *matHeaderCellDef>NID </th>
             <td mat-cell *matCellDef="let element"> {{element.nid}} </td>
-          </ng-container>
+          </ng-container> -->
         
           <!-- Weight Column -->
           <ng-container matColumnDef="mobile">
