--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
         <p class="text-left">Total registered Users: {{totalITPs}}</p>
     </div>
 </div>
-<div class="container">
+<div class="container" *ngIf="isItp">
     <div class="subcontainer">
         <h1>{{totalSubmitted}}</h1>
         <h4>Total no of return submission assisted</h4>
